@@ -151,6 +151,9 @@ filebeat:
   # Event count spool threshold - forces network flush if exceeded
   #spool_size: 2048
 
+  # Enable async publisher pipeline in filebeat (Experimental!)
+  #publish_async: false
+
   # Defines how often the spooler is flushed. After idle_timeout the spooler is
   # Flush even though spool_size is not reached.
   #idle_timeout: 5s
@@ -195,6 +198,20 @@ output:
     # Optional index name. The default is "filebeat" and generates
     # [filebeat-]YYYY.MM.DD keys.
     #index: "filebeat"
+
+    # A template is used to set the mapping in elasticsearch
+    # By default template loading is disabled an not template is loaded.
+    # These settings can be adjusted to load your own template or overwrite existing ones
+    #template:
+
+      # Template name. By default the template name is the same as the filebeat
+      #name: "filebeat"
+
+      # Path to template file
+      #path: "filebeat.template.json"
+
+      # Overwrite existing template
+      #overwrite: false
 
     # Optional HTTP Path
     #path: "/elasticsearch"
